
/*
 *        CHANGELOG
 *        0.9.5        2016-01-15        - do not overwrite style file upon upgrade anymore
 *        0.9.4        2016-01-15        - improved the placeholders in template for allday events
 *        0.9.3        2016-01-14        - send user agent for advanced authentication
 *        0.9.2        2016-01-11        - add the option to skip ssl certificate verification
 *        0.9.1        2015-07-29        - fix start time check for wholeday events
 *        0.9.0        2015-07-22        - add checkbox to control the midnight shift
 *        0.8.11        2015-07-22        - properly treat calendar urls, which are commented out
 *        0.8.10        2015-07-22        - fixed events first ocurring before 1970,thanks to Alex
 *        0.8.9        2015-07-16        - updated url, fixed regression for date end at midnight
 *        0.8.8        2015-07-16        - fixed one minute shift of endtime
 *        0.8.7        2015-07-14        - re-added a description for the urls input in the backend
 *        0.8.6        2015-04-10        - fixed limit in max_days for not reoccurring events
 *        0.8.5        2015-04-02        - hide advanced settings by default (inspired by Ruud)
 *        0.8.4        2015-04-02        - optimize-date: drop end time for multiday-events
 *        0.8.3        2015-03-30        - allow date-place holders in entry-template 
 *        0.8.2        2015-03-30        - improve css template, thanks to Ruud for proposing 
 *        0.8.1        2015-03-30        - bugfix in update script, thanks to Ruud for reporting 
 *        0.8.0        2015-03-28        - added css support, update help pages 
 *        0.7.2        2015-03-24        - several bugfixes, cleanup from leftover code 
 *        0.7.1        2015-03-18        - added separate date template 
 *        0.7.0        2015-03-16        - changed backend to template solution