@@ -3,6 +3,7 @@
  *
  * @category        page
  * @package         External Calendar
+ * @version         0.9.6
  * @authors         Martin Hecht
  * @copyright       2004-2015, Website Baker Org. e.V.
  * @link            http://forum.websitebaker.org/index.php/topic,28493.0.html
@@ -10,7 +11,7 @@
  * @platform        WebsiteBaker 2.8.x
  * @requirements    PHP 5.3 and higher and Curl 
  *
-*/
+ **/
 
 /*
  -----------------------------------------------------------------------------------------
