@@ -3,6 +3,7 @@
  *
  * @category        page
  * @package         External Calendar
+ * @version         0.9.6
  * @authors         Martin Hecht
  * @copyright       2004-2015, Website Baker Org. e.V.
  * @link            http://forum.websitebaker.org/index.php/topic,28493.0.html
@@ -10,7 +11,7 @@
  * @platform        WebsiteBaker 2.8.x
  * @requirements    PHP 5.3 and higher and Curl 
  *
-*/
+ **/
 
 
 /* -------------------------------------------------------- */
@@ -253,7 +254,7 @@ echo $section_start;
 
 $counter=0;
 foreach($data as $key => $entry){
-        if(($entry["start"]>=strtotime($starttime))
+        if((($entry["start"]>=strtotime($starttime))||($entry["end"]>=strtotime($starttime)))
           &&(!array_key_exists("class",$entry["data"])
           ||preg_match("/PRIVATE/i",$entry["data"]["class"])===0)){
                 if ( $entry["location"] != "" ){
