@@ -1,6 +1,7 @@
 
 /*
  *        CHANGELOG
+ *        0.9.6        2016-01-15        - correctly show long lasting current appointments
  *        0.9.5        2016-01-15        - do not overwrite style file upon upgrade anymore
  *        0.9.4        2016-01-15        - improved the placeholders in template for allday events
  *        0.9.3        2016-01-14        - send user agent for advanced authentication
